# Eggs

./: CMakeLists.txt  GameDesign.sln  GameDesign.vcxproj  GameDesign.vcxproj.filters  GameStateList.h  GameStateManager.c  GameStateManager.h  Input.c  Input.h  Level1.c  Level1.h  Level2.c  Level2.h  Level3.c  Level3.h  Level4.c  Level4.h  Level5.c  Level5.h  LevelChoose.c  LevelChoose.h  Output.txt  README.md  System.c  System.h  main.c
Debug/: GameDesign.ilk  Output.txt  vc140.idb  vc141.idb
Debug/GameDesign.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameDesign.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
res/: Thumbs.db
